HW7/E-2.3.29-Collatz/wdir_msg/compile.err

Collatz.java:91: error: unexpected type
                if (memo[l]==max && print=false) 
                                 ^
  required: variable
  found:    value
1 error


